# business-ui

./: .gitignore  CODE_OF_CONDUCT.MD  CONTRIBUTING.MD  README.md  codecov.yaml  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.changeset/: 33787-continuation-out-wording.md  33873-filing-detail-comments.md  afraid-carrots-rush.md  all-cups-rhyme.md  bitter-trams-stick.md  blue-bags-say.md  blue-spies-kiss.md  brave-houses-watch.md  bright-names-grow.md  bright-suns-cover.md  calm-worlds-drum.md  chubby-trams-taste.md  clean-corners-invite.md  clean-days-send.md  clean-donkeys-make.md  clean-snails-buy.md  clever-frogs-jam.md  clever-pants-greet.md  cold-worlds-relax.md  config.json  cool-garlics-joke.md  cool-plums-shout.md  (+99 more)
api/: .env.sample  README.md  pyproject.toml  wsgi.py
api/.devcontainer/: devcontainer.json
api/devops/: vaults.gcp.env
api/devops/gcp/: clouddeploy-targets.yaml
api/migrations/versions/: 0a47d4f8452d_.py  14bcb583d3cc_.py  5bb17da90971_.py  6abbcc70e44c_.py  a1b2bfd77f2d_.py  b892c256d561_.py  d979fbe60318_.py  df553bf0a045_.py  fe1a62b01dfa_.py
api/report-templates/template-parts/: certification.html
api/report-templates/template-parts/common/: businessDetails.html
api/src/business_ar_api/: __init__.py  config.py
api/src/business_ar_api/common/: auth.py  enum.py  error.py  flags.py
api/src/business_ar_api/email_templates/: BC-AR-PAID.html
api/src/business_ar_api/email_templates/common/: business-dashboard-link.html  business-info.html
api/src/business_ar_api/enums/: enum.py
api/src/business_ar_api/exceptions/: __init__.py  exceptions.py  responses.py
api/src/business_ar_api/models/: __init__.py  ar_reminder.py  base_model.py  business.py  colin_event_id.py  dataclass.py  db.py  filing.py  invitations.py  user.py
api/src/business_ar_api/resources/: __init__.py  accounts.py  base.py  business.py  documents.py  filing.py  internal.py  invitation.py  meta.py  reports.py  user.py
api/src/business_ar_api/schemas/: utils.py
api/src/business_ar_api/schemas/business-ar/: ar_filing.json  components.json  new_account.json  user_tos.json
api/src/business_ar_api/services/: __init__.py  account_service.py  ar_reminder_service.py  business_service.py  filing_service.py  invitation_service.py  notification_service.py  payment_service.py  report_service.py  rest_service.py  schema_service.py
api/src/business_ar_api/utils/: corps_metadata.py  legislation_datetime.py  registrar_metadata.py  user_context.py
api/tests/: __init__.py  conftest.py
api/tests/postman/: business-ar-api.postman_collection.json  business-ar-api.postman_environment.json
api/tests/unit/: __init__.py
api/tests/unit/models/: test_business.py  test_colin_event_id.py  test_filing.py  test_invitation.py
api/tests/unit/resources/: test_business.py  test_meta.py
jobs/business-sync/: .env.sample  Dockerfile  README.md  pyproject.toml  run.sh
jobs/business-sync/src/business_sync/: __main__.py  config.py  job.py
jobs/business-sync/src/business_sync/utils/: logging.py
queue_services/business-ar-pay/: Dockerfile  README.md  pyproject.toml  wsgi.py
queue_services/business-ar-pay/.devcontainer/: Dockerfile  devcontainer.json
queue_services/business-ar-pay/src/business_ar_pay/: __init__.py  config.py
queue_services/business-ar-pay/src/business_ar_pay/resources/: __init__.py  pay_filer.py
queue_services/business-ar-pay/src/business_ar_pay/services/: __init__.py
(+921 files in other folders)
